--- a/frontend/src/assets/styles/style.scss
+++ b/frontend/src/assets/styles/style.scss
@@ -27,6 +27,7 @@
   --color-text-placeholder: #A9A9A9;
   --color-text-chat: #AAFF33;
   --color-text-logo: #404040;
+  --color-text-error: #F24343;
 
   --color-border-main: #D7D7D7;
   --color-border-second: #949494;
@@ -65,6 +66,10 @@
     line-height: var(--text-lg--line-height);
     transition: background-color .10s ease-out;
     cursor: pointer;
+
+    & p{
+      user-select: none;
+    }
 
     &-main{
       background-color: var(--color-main);
@@ -210,17 +215,64 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    width: 100%;
     column-gap: 4px;
     outline: none;
     border-radius: 4px;
+    border: 2px solid var(--color-border-main);
     background-color: var(--color-bg-input);
+    padding: 0 8px;
 
     & > input{
-      @apply text-lg px-2 py-1 bg-transparent grow rounded;
+      @apply text-lg py-1 bg-transparent grow rounded border-none min-w-0 w-full;
     }
 
     &:focus-within{
       outline: 2px solid var(--color-border-focus);
+    }
+
+    &-slider{
+      // --size: 20px;
+      --on: var(--color-main);
+      --off: var(--color-bg-second);
+      --circle: rgb(255,255,255);
+    
+      display: block;
+      position: relative;
+      // width: var(--size);
+      // height: var(--size);
+      cursor: pointer;
+
+      &:before, &:after{
+        content: "";
+        position: absolute;
+      }
+      &:before{
+        height: 100%;
+        width: 200%;
+        background-color: var(--off);
+        box-shadow: 0 0 0 1px var(--off);
+        transform: translate( -25% , 0 );
+        border-radius: 30px;
+        transition: all 0.2s ease-in-out; 
+      }
+      &:after{
+        width: 80%;
+        height: 80%;
+        margin-top: 10%;
+        margin-left: 10%;
+        background-color: var(--circle);
+        border-radius: 30px;
+        transform: translate( -60% , 0 );
+        transition: all 0.2s ease-in-out;
+      }
+      &:checked:after{
+        transform: translate( 60% , 0 );
+      }
+      &:checked:before{
+        background-color: var(--on);
+        box-shadow: 0 0 0 1px var(--on);
+      }
     }
   }
 }
